# term-unification

./: CHANGELOG.md  _cabal.project.freeze  cabal.project  term-unification.cabal
src/: Common.hs  Rules.hs  Term.hs  Unify.hs
src/Control/Monad/: Backtrack.hs  Yield.hs
src/Control/Monad/State/: LocalGlobal.hs
