cabal-version:      3.6
name:               term-unification
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            NONE

-- The package author(s).
author:             Iain Moncrief, Christine Lin

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         moncrief@oregonstate.edu

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Unify

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: GHC2021
